fixed spacing for footer

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
 .footer {
     width: 100%;
     height: 50px;
+    margin-top: 5%;
     display: flex;
     color: white;
     background: dimgray;
@@ -35,13 +36,10 @@
     border-top: 5px lightseagreen;
 }
 .contentbox {
-    /* margin: 3px; */
-    /* padding: 2px; */
     background: white;
-    /* opacity: 20%; */
-
-    width: 900px;
-    height: 300px;
+    color: gray;
+    width: 960px;
+    height: auto;
     display: flow-root;
     text-align: left;
 
@@ -75,7 +73,8 @@ h1 {
     color: lightseagreen;
 }
 p {
-    color: gray;
+    font-size: 14px;
+    line-height: 1.2em;
 }
 
 .name {
